Align Loading spinner correctly on Item, Category, Transaction routes

--- a/src/assets/styles/routes/Category.module.css
+++ b/src/assets/styles/routes/Category.module.css
@@ -8,6 +8,14 @@
   gap: 12px;
 }
 
+.loading {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .modal_ui {
   display: flex;
   gap: 12px;
