--- a/src/assets/styles/routes/Item.module.css
+++ b/src/assets/styles/routes/Item.module.css
@@ -3,6 +3,14 @@
   margin-bottom: 36px;
 }
 
+.loading {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .modal_ui {
   display: flex;
   gap: 12px;
